Fixed wrapper not wrapping content inside

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -3,7 +3,7 @@ header {
   top: 120px;
   height: 400px;
   width: 100%;
-  background: whitesmoke;
+  background: #f4f1ec;
 }
 
 .avatar-container {
